--- a/package.json
+++ b/package.json
@@ -1,3 +1,10 @@
+"scripts": {
+  "dev": "nuxt",
+  "build": "nuxt build",
+  "start": "nuxt start",
+  "generate": "nuxt generate",
+  "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+},
 {
   "name": "clothshop",
   "version": "0.0.1",
